--- a/Gather/Storyboard-Phone.storyboard
+++ b/Gather/Storyboard-Phone.storyboard
@@ -94,13 +94,32 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="startGathering:" destination="0vG-N5-db0" eventType="touchUpInside" id="SKW-ld-yHS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Awi-Hi-fg8">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Find Friends to Follow">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="iIx-xC-pnE" kind="push" id="Her-Ar-VOT"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Awi-Hi-fg8" firstAttribute="leading" secondItem="isL-1w-Z4B" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="7AR-jc-HT2"/>
                             <constraint firstItem="Tkd-Rj-8Th" firstAttribute="leading" secondItem="isL-1w-Z4B" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="9NK-tN-DEI"/>
                             <constraint firstAttribute="trailing" secondItem="Tkd-Rj-8Th" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="HSL-VK-xyZ"/>
                             <constraint firstAttribute="bottom" secondItem="Tkd-Rj-8Th" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="mwb-aq-R7P"/>
+                            <constraint firstItem="Awi-Hi-fg8" firstAttribute="top" secondItem="isL-1w-Z4B" secondAttribute="top" constant="20" symbolic="YES" type="default" id="pg0-pD-wLj"/>
+                            <constraint firstAttribute="trailing" secondItem="Awi-Hi-fg8" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="zHO-mm-fHf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Aqe-hZ-Cdb"/>
@@ -112,8 +131,41 @@
             </objects>
             <point key="canvasLocation" x="637" y="75"/>
         </scene>
+        <!--Discoverable Users View Controller - Find Friends-->
+        <scene sceneID="WJM-ja-hsx">
+            <objects>
+                <tableViewController id="iIx-xC-pnE" customClass="DiscoverableUsersViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="kNH-P0-dSd">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="UserCell" id="Zng-97-9ij">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="iIx-xC-pnE" id="dOL-es-oim"/>
+                            <outlet property="delegate" destination="iIx-xC-pnE" id="KYw-IQ-MaW"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Find Friends" id="LP6-PL-eVq"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LkX-pf-mdd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1120" y="75"/>
+        </scene>
     </scenes>
     <classes>
+        <class className="DiscoverableUsersViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DiscoverableUsersViewController.h"/>
+        </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
@@ -127,6 +179,7 @@
         <class className="StartViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/StartViewController.h"/>
             <relationships>
+                <relationship kind="action" name="findFriends:"/>
                 <relationship kind="action" name="startGathering:"/>
             </relationships>
         </class>
